bug 50497: plaintext copy loses newlines on pastebug 57292: copy of table cell contents shouldn't copy cellbug 57170: some inline style not preserved across copy pastefor all above: r=akkana; sr=sfraser